# golinks

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: build.yaml
examples/: config.yaml
helm/: Chart.yaml  values.yaml
helm/templates/: config.yaml  deployment.yaml  ingress.yaml  service.yaml
src/golinks/: __init__.py
